--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 
   <!-- Challenge 3: Wrap the img tag below with a link that uses the target attribute -->
   <img src="https://ironboard-learn.s3.amazonaws.com/Image_61_lion.jpg" alt="Image by Alexas Fotos from Pixabay">
-
+  <a href="#" target = "_blank"></a>
 </body>
 </html>
